--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   <div class="wrapper">
     <!-- HEADER -->
     <!-- SUB HEAD -->
-
+    <h1>This Is My Blog</h1>
+    <h3>Thank you for Visiting!</h3>
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+       <img src="MOCKUP.jpg" alt="Mockup">
+       <h5>Dummie Site</h5>
+       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos eaque, dignissimos dicta corporis sunt deserunt nihil laboriosam, <br>
+         quibusdam eos laudantium sed repellendus similique optio eveniet ducimus illum, reiciendis ex asperiores?</p>
+        <a href="">Read MOre</a>
     </div>
   </div>
 </body>
